2007-06-26  Satoshi Konno <skonno@cybergarage.org>
	* Added CgByte to <typedef.h>

2007-06-13  Fabrice Fontaine Orange <ffontaine.ext@orange-ftgroup.com>
	* Fixed a memory leak in cg_http_request_delete().
	* Fixed compilation issue when using DCG_UPNP_NOUSE_CONTROLPOINT flag in cg_upnp_device_updatefromssdppacket().
	* Fixed a memory leak in cg_upnp_device_getservicebycontrolurl().
	* Fixed cg_thread_start(). Threads used to answer UPnP requests are created
	  in joinable state but the main thread doesn't call pthread_join on them.
	  So, they are kept alive until the end of the program. By creating them
	  in detached state, they are correctly clean up.
	* Fixed cg_thread_stop_with_cond() to wait one second for thread termination instead of using pthread_join(). 

2007-06-06  Satoshi Konno <skonno@cybergarage.org>
 * Added checking 64 bit support, long long, to the configure.in for GCC.
 * Fixed to compile cg_str2longlong() and cg_longlong2str() using GCC.
 * Fixed cg_longlong2str() to return the buffer using GCC or ISOC99.
 
2007-03-20  Satoshi Konno <skonno@cybergarage.org>
 * Added a parameter, CgString, to return the result safety and the implementation without curl for the following functions.
   cg_net_uri_unescapestring() and cg_net_uri_escapestring().
 * Added a define, CG_USE_NET_URI_ESCAPESTRING_SKIP,in cg_net_uri_escapestring() and disabled the function not to skip only the first path.
 * Changed cg_upnp_device_httprequestrecieved() using the new cg_net_uri_unescapestring().
 * Added the following functions.
   cg_net_uri_isreservedchar()
   cg_net_uri_isunreservedchar()
   cg_net_uri_isescapechar()
   cg_net_uri_isalphanumchar()
 * Fixed cg_net_uri_escapestring() to use curl_escape() instead of curl_unescape().
 * Fixed cg_net_uri_unescapestring() to use curl_unescape() instead of curl_escape().

2007-03-18  Satoshi Konno <skonno@cybergarage.org>
 * Added CgInt64 to <typedef.h>
 * Changed the following functions to use CgInt64.
   cg_longlong2str()